# nivesh-mf-platform

./: .env.example  FILE_RECOVERY_SUMMARY.md  LICENSE  README.md  RECOVERY_COMPLETE.txt  alembic.ini  db_design.txt  diagnose.sh  docker-compose.yml  download_mf_historical_data.py  main.py  pyproject.toml  quick_setup_dual_db.sh  requirements.txt  setup_database.sh  test.ipynb  test_metrics_engine.py  verify_db_schema.py
analytics/: metrics_engine.py  nav_ingestion.py  recommendation_engine.py
analytics/nav_providers/: mfapi.py
backend/: main.py
backend/alembic/: env.py
backend/api/: funds.py  schemas.py
backend/core/: config.py
backend/db/: session.py  timescaledb_utils.py
backend/examples/: db_query_examples.py
backend/models/: __init__.py  base.py  benchmark_nav.py  fund_manager.py  fund_manager_mapping.py  fund_metrics_snapshot.py  metrics_jobs.py  mutual_fund.py  nav_data.py
backend/services/: data_sync_service.py  metrics_job_runner.py
data/: benchmarks.csv  fund_manager_mapping.csv  fund_managers.csv  funds.csv
docs/: 01_problem_statement.md  02_elaborated_problem_breakdown.md  03_analysis_logic.md  04_implementation_steps.md  05_next_steps_and_roadmap.md  06_metrics_specification.md  07_database_schema.md  08_agentic_ai_design.md  09_api_contracts.md  10_development_sprint_plan.md  11_nav_ingestion_strategy.md  12_benchmark_mapping.md  13_ranking_weight_justification.md  14_testing_strategy.md  15_production_readiness_checklist.md  15_ui_logic_explanation.md  DOCUMENTATION_UPDATE_SUMMARY.md  README.md
scripts/: seed_data.py
(+37 files in other folders)
