[project]
name = "mf-analysis-python"
version = "0.1.0"
description = "Finance-first, explainable mutual fund analytics and recommendation system"
readme = "docs/README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

authors = [
  { name = "Prasad P R" }
]

dependencies = [
    # Core backend
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",

    # Database
    "sqlalchemy>=2.0.46",
    "psycopg[binary]==3.3.2",
    "alembic>=1.18.1",

    # Analytics (finance-safe)
    "numpy>=1.26,<2.0",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.8.0",

    # HTTP & utils
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "python-dotenv>=1.2.1",
    "cachetools>=6.2.4",
    "loguru>=0.7.3",

    # Frontend
    "streamlit>=1.53.1",
    "plotly>=6.5.2",
    "altair>=6.0.0",

    # Agentic AI
    "openai>=2.15.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
